# chatbot-demo

./: Dockerfile  Makefile  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.dvc/: config
chatbot_demo/: __init__.py  __main__.py  agent.py  agent_test.py  app.py  config.py  evaluate.py
data/: .gitignore  questions.csv.dvc
notebooks/: test.ipynb
