[metadata]
name = chatbot-demo
version = 0.1.0
author = Sparrow Computing
author_email = ben@sparrow.dev

[options]
install_requires = 
    fastapi
    fire
    gunicorn
    langchain
    langchain-community
    langchain-openai
    langchainhub
    langserve[server]
    pydantic<2.0.0
    stackapi
    uvicorn

[options.extras_require]
dev =
    dvc
    dvc-s3
    jupyter
    pytest
    pytest-cov

[options.entry_points]
console_scripts = 
    chatbot-demo = chatbot_demo.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import